first article done

--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Boolandot</title>
+    <title>Boolando</title>
 </head>
 <body>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="article">
+                <img src="img/1.webp" alt="Article-1">
+                <span class="first-tag">-50%</span>
+                <span class="second-tag">Sostenibilità</span>
+                <div class="heart-container"><span class="heart">&hearts;</span></div>
+                </div>
+            </div>
+        <div class="container-two">
+            <span class="brand">Levi's</span><br>
+            <span class="model">Relaxed Fit Tee Unisex</span> <br>
+            <span class="new-price">14,99€</span>
+            <span class="original-price">29.99€</span>
+        </div> 
+        </div>
+    </main>
     
 </body>
 </html>
