--- a/index.html
+++ b/index.html
@@ -9,22 +9,73 @@
 </head>
 <body>
     <main>
+        <!--articles-->
         <div class="container">
             <div class="row">
                 <div class="article">
-                <img src="img/1.webp" alt="Article-1">
-                <span class="first-tag">-50%</span>
-                <span class="second-tag">Sostenibilità</span>
-                <div class="heart-container"><span class="heart">&hearts;</span></div>
+                     <img class="first-image" src="img/1.webp" alt="Article-1">
+                     <img class="second-image" src="img/1b.webp" alt="New-image">
+                       <span class="first-tag">-50%</span>
+                       <span class="second-tag">Sostenibilità</span>
+                         <div class="heart-container"><span class="heart">&hearts;</span></div>
+                         <span class="brand">Levi's</span><br>
+                          <span class="model">Relaxed Fit Tee Unisex</span> <br>
+                           <span class="new-price">14,99€</span>
+                           <span class="original-price">29.99€</span>
                 </div>
+                <div class="article">
+                    <img class="first-image" src="img/2.webp" alt="Article-2">
+                    <img class="second-image" src="img/2b.webp" alt="New-imagw">
+                      <span class="first-tag">-30%</span>
+                        <div class="heart-container"><span class="heart">&hearts;</span></div>
+                        <span class="brand">Guess</span><br>
+                         <span class="model">Roses Tee</span> <br>
+                          <span class="new-price">20,99€</span>
+                          <span class="original-price">29.99€</span>
+                    </div>
+                    <div class="article">
+                        <img class="first-image" src="img/3 1.webp" alt="Article-3">
+                        <img class="second-image" src="img/3b 1.webp" alt="New-image">
+                          <span class="first-tag">-30%</span>
+                            <div class="heart-container"><span class="heart">&hearts;</span></div>
+                            <span class="brand">Levi's</span><br>
+                             <span class="model">Relaxed Fit Tee Unisex</span> <br>
+                              <span class="new-price">14,99€</span>
+                              <span class="original-price">29.99€</span>
+                              
+                    </div>
             </div>
-        <div class="container-two">
-            <span class="brand">Levi's</span><br>
-            <span class="model">Relaxed Fit Tee Unisex</span> <br>
-            <span class="new-price">14,99€</span>
-            <span class="original-price">29.99€</span>
-        </div> 
-        </div>
+            <div class="row-2">
+                <div class="article">
+                     <img class="first-image" src="img/4.webp" alt="Article-4">
+                     <img class="second-image" src="img/4b.webp" alt="New-image">
+                       <span class="first-tag">-50%</span>
+                       <span class="second-tag">Sostenibilità</span>
+                         <div class="heart-container"><span class="heart">&hearts;</span></div>
+                         <span class="brand">Levi's</span><br>
+                          <span class="model">Tee Unisex</span> <br>
+                           <span class="new-price">14,99€</span>
+                           <span class="original-price">29.99€</span>
+                </div>
+                <div class="article">
+                    <img class="first-image" src="img/5.webp" alt="Article-5">
+                    <img class="second-image" src="img/5b.webp" alt="New-image">
+                        <div class="heart-container"><span class="heart">&hearts;</span></div>
+                        <span class="brand">Maya Deluxe</span><br>
+                         <span class="model">Stripe Bodige</span> <br>
+                          <span class="new-price">14,99€</span>
+               </div>
+               <div class="article">
+                <img class="first-image" src="img/6.webp" alt="Article-6">
+                <img class="second-image" src="img/6b.webp" alt="New-image">
+                  <span id="special-tag" class="second-tag">Sostenibilità</span>
+                    <div class="heart-container"><span class="heart">&hearts;</span></div>
+                    <span class="brand">Esprit</span><br>
+                     <span class="model">Maglione Black</span> <br>
+                      <span class="new-price">14,99€</span>
+                      <span class="original-price">29.99€</span>
+           </div>
+            </div> 
     </main>
     
 </body>
